Working on test cases for core module and other refactoring